bug fix button on iphone

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -405,6 +405,7 @@ body.noscroll {
   /* text-shadow: inherit; */
   border-width: 7px;
   border-color: gray;
+  -webkit-appearance: button;
 }
 
 #add-person:hover {
@@ -1087,6 +1088,7 @@ body.noscroll {
     /* text-shadow: inherit; */
     border-width: 7px;
     border-color: gray;
+    -webkit-appearance: button;
   }
 
   #add-person > i {
